<resources>
    <string name="app_name">Pet Club</string>

    <!-- General Strings -->
    <string name="hide">Hide</string>
    <string name="connection_error">Connection Error</string>
    <string name="no_internet">No internet connection please try again later</string>
    <string name="retry">Retry</string>
    <string name="cancel">Hủy</string>
    <string name="some_error">Some error occurred, try again later</string>
    <string name="list_no_result">Sorry, There are no results here!</string>

    <!-- Menu name !-->
    <string name="home">Tổng quan</string>
    <string name="bill">Hóa đơn</string>
    <string name="goods">Hàng hóa</string>
    <string name="services">Dịch vụ</string>
    <string name="notification">Thông báo</string>
    <string name="more">Nhiều hơn</string>

    <string name="add_goods">Thêm hàng hóa</string>
    <string name="add_service">Thêm dịch vụ</string>
    <string name="edit_goods">Sửa hàng hóa</string>
    <string name="edit_service">Sửa dịch vụ</string>
    <string name="choose_brand">Chọn thương hiệu</string>
    <string name="choose_type">Chọn nhóm hàng</string>
    <string name="choose_location">Chọn vị trí</string>
    <string name="name_brand">Tên thương hiệu</string>
    <string name="name_type">Tên nhóm hàng</string>
    <string name="name_location">Tên vị trí</string>
    <string name="add_brand">Thêm thương hiệu</string>
    <string name="add_type">Thêm nhóm hàng</string>
    <string name="add_location">Thêm vị trí</string>

    <string name="save">Lưu</string>
    <string name="save_and_continue">Lưu và thêm mới</string>

    <!-- Hàng hóa -->
    <string name="goods_info">%1$s hàng hóa - Tồn kho %2$s</string>

    <!-- Hóa đơn -->
    <string name="bill_info">%1$s hóa đơn</string>
    <string name="bill_total">Tổng %1$s</string>

    <string name="price_sell">Giá bán</string>
    <string name="price_capital">Giá vốn</string>

    <string name="all_time">Toàn thời gian</string>
    <string name="today">Hôm nay</string>
    <string name="yesterday">Hôm qua</string>
    <string name="this_week">Tuần này</string>
    <string name="last_week">Tuần trước</string>
    <string name="this_month">Tháng này</string>
    <string name="last_month">Tháng trước</string>
    <string name="time_options">Tùy chọn...</string>

    <!-- Add Goods/ Services -->
    <string name="goodsId">Mã hàng</string>
    <string name="barcode">Mã vạch</string>
    <string name="goodsName">Tên hàng</string>
    <string name="type">Nhóm hàng</string>
    <string name="type2">Loại hàng</string>
    <string name="brand">Thương hiệu</string>
    <string name="measure_stock">Định mức tồn</string>
    <string name="selling_price">Giá bán</string>
    <string name="buying_price">Giá vốn</string>
    <string name="warehouse">Thẻ Kho</string>
    <string name="location">Vị trí</string>
    <string name="inventory">Tồn kho</string>
    <string name="weight">Trọng lượng \n (gram)</string>
    <string name="inventory_minimum">Tồn ít nhất</string>
    <string name="inventory_maximum">Tồn nhiều nhất</string>
    <string name="description">Mô tả</string>
    <string name="note_goods">Mẫu ghi chú (hóa đơn, đặt hàng)</string>
    <string name="note_order">Ghi chú đặt hàng</string>
    <string name="view_more">Xem thêm</string>

    <string name="measure_stock_detail">%1$s > %2$s</string>

    <string name="sell_direct">Bán trực tiếp</string>
    <string name="point_accumulation">Tích điểm</string>

    <!-- Hint -->
    <string name="hint_goodsId">Mã hàng tự động</string>
    <string name="hint_barcode">Mã vạch</string>
    <string name="hint_goodsName">Tên hàng</string>
    <string name="hint_type">Chọn Nhóm hàng</string>
    <string name="hint_brand">Chọn Thương hiệu</string>
    <string name="hint_location">Chọn vị trí</string>
    <string name="hint_zero">0</string>
    <string name="hint_max">999999999</string>

    <string name="hint_email">Nhập email vào đây…</string>
    <string name="hint_password">Nhập Mật khẩu…</string>
    <string name="hint_username">Nhập tên người dùng…</string>
    <string name="hint_phone_number">Nhập số điện thoại…</string>
    <string name="recover_password">Khôi phục mật khẩu</string>

    <!-- Auth -->

    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="forgot_password1">Quên mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="user_name">Tên người dùng</string>
    <string name="phone_number">Số điện thoại</string>

    <!-- Pop up -->
    <string name="add">Thêm</string>
    <string name="delete">Xóa</string>

    <!-- Detail Product Popup -->
    <string name="print">In tem mã</string>
    <string name="stop_selling">Ngừng kinh doanh</string>
    <string name="delete_product">Xóa hàng hóa</string>

    <string name="press_again_to_exit">Nhấn lần nữa để thoát!</string>
    <string name="confirm">Xác nhận</string>
    <!-- Error -->

    <string name="delete_success">Xóa thành công</string>

</resources>