<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/nav_home_selector"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_bill"
        android:icon="@drawable/nav_bill_selector"
        android:title="@string/bill" />

    <item
        android:id="@+id/nav_goods"
        android:icon="@drawable/nav_goods_selector"
        android:title="@string/goods" />

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/nav_notifications_selector"
        android:title="@string/notification" />

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/nav_more_selector"
        android:title="@string/more" />

</menu>