<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dimen350"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_pretty_pop_up"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dimen10">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_brand"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size18"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen10"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size18"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>